--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-baseURL: 'https://www.seusite.com/'
+baseURL: 'https://www.gtesperto.meufuturo.shop/' # ToDo 0
 languageCode: 'pt-br'
-title: 'Título da Página | Palavra-chave Principal' # ToDo 1
+title: 'Curso Gestor de Tráfego Esperto | meufuturo.shop' # ToDo 1
 enableRobotsTXT: true
 defaultContentLanguage: 'pt-br'
 module:
@@ -24,5 +24,5 @@ params: # ToDo 2
       '– Aprenda de forma simples com um Engenheiro de Software da PUCRS.',
       '– Receba essa linda template reutilizável imediatamente e aprenda a editá-la no curso.',
     ]
-  cta_texto: 'Acessar Site Completo'
+  cta_texto: 'Acessar site completo'
   cta_link: 'https://www.linkedin.com/in/jmfantin' # Link para o botão de CTA
